tests/fixtures/invalid/none_bitand_bytes.py
# Cannot bitwise AND None and Bytes
x: None = None & b"hello"
